--- a/Frontend/html/orderconfirm.html
+++ b/Frontend/html/orderconfirm.html
@@ -18,87 +18,7 @@
 
 <body>
 	<div id="confirmation" class="kontakt" style="margin-left:30px;margin-top:15px;">
-		<!--<h1 style="text-align: center;">Vielen Dank für ihre Bestellung!</h1>
-			<h2 style="text-align: center;">Ihre Bestellung vom 12.04.2020 19:45 Uhr:</h2>
-			<h2 style="text-align: center;">Bestellnummer: 12345</h2>
-			<div style="text-align: center;" class="wrapper">
-				<input onclick="window.print()" type="image" src="../img/Drucken.png" alt="Drucken">
-			</div>
-			<div class="container wasdienedgeschafthaben">
-				<div class="row">
-					<table>
 
-
-						<tr>
-							<th>Artikel</th>
-							<th>Menge</th>
-							<th>Mengenpreis</th>
-						</tr>
-
-						<tr>
-							<td>Gloria FM10</td>
-							<td>3</td>
-							<td>89,97 €</td>
-
-						</tr>
-						<tr>
-							<td>SONAX AutoShampoo</td>
-							<td>1</td>
-							<td>5,79 €</td>
-
-
-						</tr>
-						<tr>
-							<td>Menzerna 400</td>
-							<td>2</td>
-							<td>27,89 €</td>
-
-						</tr>
-						<tr>
-							<td>SWISSVAX SWIZÖL Autobahn</td>
-							<td>1</td>
-							<td>39,99 €</td>
-
-						</tr>
-						<tr></tr>
-						<tr>
-							<td></td>
-							<td>inkl. 19% MwSt.</td>
-							<td>34,37 €</td>
-						</tr>
-
-						<tr>
-							<td>Gesamtkosten:</td>
-							<td></td>
-							<td>180,87 €</td>
-							<td></td>
-						</tr>
-
-
-				</div>
-				</table>
-
-
-
-			</div>
-	</div>
-
-
-	<h2 style="text-align: center;">Ihre Zahlungsweise: Paypal</h2>
-
-	<div>
-		<h2 style="text-align: left;">Ihre Lieferanschrift:</h2>
-		<p style="text-align: left;">Vorname: Max</p>
-		<p style="text-align: left;">Nachname: Muster</p>
-		<p style="text-align: left;">Straße/Hausnummer: Musterstraße 5</p>
-		<p style="text-align: left;">PLZ: 11111</p>
-		<p style="text-align: left;">Ort: Musterhausen</p>
-	</div>
-
-
-	</div>
-
--->
 		<hr>
 
 		<script>
@@ -109,10 +29,9 @@
 					method: "get",
 					dataType: "json"
 				}).done(function(response) {
-					var order = '';
+					var order = response;
 					var Gesamtkosten = 0;
 					var tmp = '';
-					order = response
 					//Create confirmation..................................................................................................
 
 					tmp += '<h1 style="text-align: center;">Vielen Dank für ihre Bestellung!</h1>';
@@ -209,7 +128,7 @@
 
 						$('#confirmation').html(tmp);
 
-//AJAX to ckear the vin for the next customer
+						//AJAX to ckear the bin for the next customer
 						$.ajax({
 							url: "http://localhost:8000/api/bestellposition/delete/all",
 							method: "delete",
