--- a/Frontend/html/Warenkorb.html
+++ b/Frontend/html/Warenkorb.html
@@ -49,7 +49,7 @@
             tmp += '<tr>';
             tmp += '<td><a href="produktdetail.html?produkt=' + response.daten[i].produkt.id + '" style="color: black;">' + response.daten[i].produkt.name + '</a></td>';
             tmp += '<td><input id="Input' + response.daten[i].produkt.id + '" step="1" data-step-max="10" type="number" value="' + response.daten[i].menge +
-              '" data-decimals="0" min="1" max="360" class="col-3" /><button class="buttonchange" onclick="Change(' + response.daten[i].produkt.id + ')">Menge ändern</button></td>';
+              '" data-decimals="0" min="1" max="360" class="col-3" /><button onclick="Change(' + response.daten[i].produkt.id + ')">Menge ändern</button></td>';
             tmp += '<td>' + response.daten[i].produkt.bruttopreis.toString().replace(".", ",") + ' €</td>';
             tmp += '<td>' + Number(response.daten[i].produkt.bruttopreis * response.daten[i].menge).toFixed(2).toString().replace(".", ",") + ' €</td>';
             tmp += '<td><button onclick="DeleteItem(' + response.daten[i].produkt.id + ')" class="button">X</button></td>';
@@ -64,6 +64,9 @@
             gesamtMWST = gesamtMWST + (response.daten[i].produkt.mehrwertsteueranteil * response.daten[i].menge);
           } //End for
           tmp += '<tr></tr>';
+          tmp += '<tr style="border-bottom:1px solid black">';
+          tmp += '<td colspan="100%"></td>';
+          tmp+= '</tr>';
           tmp += '<tr>';
           tmp += '<td></td>';
           tmp += '<td></td>';
